# BoxSup-pytorch

./: .gitignore  README.md  pyproject.toml
analysis/: analysis_runner.ipynb  benchmark_num_runner_result_0sec.txt  benchmark_num_runner_result_1sec.txt  benchmark_num_runner_result_2sec.txt  benchmark_num_runner_result_5sec.txt  pydantic_dataflow.ipynb  runner_0sec.csv  runner_1sec.csv  runner_2sec.csv  runner_5sec.csv
boxsup_pytorch/: __init__.py  __main__.py  launch.py
boxsup_pytorch/config/: config.py  example.toml  log_config.toml
boxsup_pytorch/core/: dataset_factory.py  logger.py  strat_factory.py
boxsup_pytorch/data/: datacontainer.py  dataloader.py  datasaver.py  dataset.py
boxsup_pytorch/data/datatrain/: __init__.py  controlwagon.py  datawagons.py  factory.py  locomotive.py
boxsup_pytorch/model/: network.py
boxsup_pytorch/pipeline/: core.py  error_calc.py  preprocess.py  process_runner.py  strats.py  trainer.py  update_masks.py  update_net.py
boxsup_pytorch/utils/: check.py  common.py  losses.py
scripts/: benchmark_baseline.py
tests/: test_losses.py  test_losses2.py  test_strats.py  test_utils_common.py
tests/data/: TESTDATA.xcf
